--- a/GUI/src/main/res/layout/activity_cook_screen.xml
+++ b/GUI/src/main/res/layout/activity_cook_screen.xml
@@ -12,7 +12,7 @@
     <GridView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/gridView"
+        android:id="@+id/list"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
