--- a/GUI/src/main/res/layout/activity_cook_screen.xml
+++ b/GUI/src/main/res/layout/activity_cook_screen.xml
@@ -12,11 +12,14 @@
     <GridView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/list"
+        android:id="@+id/grid"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_above="@+id/digitalClock" />
+        android:layout_above="@+id/digitalClock"
+        android:verticalSpacing="5dp"
+        android:numColumns="3"
+        android:longClickable="true" />
 
     <DigitalClock
         android:layout_width="wrap_content"
