--- a/GUI/src/main/res/layout/order_text.xml
+++ b/GUI/src/main/res/layout/order_text.xml
@@ -9,6 +9,20 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Order Number: "
+        android:id="@+id/title0"
+        android:textSize="18dp"
+        android:paddingTop="3dp"
+        android:paddingBottom="3dp" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/orderid" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Burger(s):"
         android:id="@+id/title1"
         android:textSize="18dp"
